src/App.css
.App {

}

.App-header {
  background: rgb(250,144,255);
  background: linear-gradient(114deg, rgba(250,144,255,1) 0%, rgba(120,241,255,1) 64%, rgba(250,140,255,1) 100%);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: #534C80;
  font-family: 'Roboto', sans-serif;
}

.maincard{
  background: rgba( 255, 255, 255, 0.25 );
  box-shadow: 10px 10px 32px 0 rgba( 31, 38, 135, 0.1 );
  border-radius:30px;
  width:50vw;
  height:70vh;
  display:flex;
  position:absolute;
}

.leftbar{
  background: rgba( 255, 255, 255, 0.25 );
  border-radius:30px 0px 0px 30px;
  width:30%;
  height:100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.mobilemenu{
  background: rgba( 255, 255, 255, 0.25 );
  border-radius:30px 0px 0px 30px;
  height:100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.mask {
  -webkit-mask-image: linear-gradient(to top, transparent 5%, black 15%);
  mask-image: linear-gradient(to bottom, top 5%, black 15%);
    overflow:hidden;
}

.mask2 {
  -webkit-mask-image: linear-gradient(to top, transparent 5%, black 35%);
  mask-image: linear-gradient(to bottom, top 5%, black 35%);
    overflow:hidden;
}

.smallcard{
  background: rgba( 255, 255, 255, 0.7 );
  box-shadow: 10px 10px 32px 0 rgba( 31, 38, 135, 0.05 );
  border-radius:30px;
  width:80%;
  min-height:80px;
  max-height:80px;
  height:80px;
  margin-top:2vh;
  display: flex;
  align-items:center;
  flex-direction: row;
}

.rightbar{
  width:100%;
  height:100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.logo{
  margin-top:5vh;
  margin-bottom:2vh;
}

.appname{
  font-weight:700;
  font-size:24px;
}

.menuitem{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-top:20px;
}
tr{
  transition: 0.3s;
  cursor: pointer;
}

tr:hover{
   transform: scale(1.2);
}

.menuitemtext{
  margin-left:15px;
  font-weight:500;
  font-size:18px;
}

.menuitems td{ height: 7vh };

.menuitems{
  margin-top:100px;
}

.menuitemswrapper{
  margin-top:30px;
}

.rightbartopbox{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width:80%;
}

.createetftitle{
  margin-top:30px;
  font-weight:600;
  font-size:24px;
}

.slidertext{
  margin-top:10px;
  font-weight:400;
  font-size:14px;
}

.slider{
  margin-top:10px;
  width:100%;
}

.menuimg{
  height:5vh;
}

.highlighttext{
  font-weight:600;
}

.smallcardtext{
  margin-left:20px;
  font-size:13px;
}

.menubutton{
  display:none;
}

.sidemenu{
  width:50vw;
}

@media only screen and (max-width: 800px) {
  .leftbar{
      display:none;
  }
  .menubutton{
    display:block;
    position:absolute;
    top:10px;
    right:10px;
  }
  .createbutton{
    width:80%;


      border: "none";
  }
  .maincard{
    width:85vw;
    height:80vh;
    overflow-y: hidden;
  }
  .rightbar{
    width:100%;
  }
  .tokenlogoimage{
    width:48px;
    height:48px;
  }
  .trximage{
    width:32px;
    height:32px;
  }
  .tokenlogo{
    height:100%;
    display: flex;
    align-items: center;
    flex-direction: column;

  }
  .trxbutton{
    height:100%;
    display: flex;
    align-items: center;
    flex-direction: column;
  }


}

.scrollview{
  width:70%;
  height:100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.trxbutton{
  margin-left: auto;
  margin-right:20px;
  transition: 0.3s;
  height:50%;
  margin-top:auto;
  margin-bottom:auto;
}
.trximage{
  margin-top:auto;
  margin-bottom:auto;
  cursor: pointer;
}

.tokenlogo{
  height:70%;
  margin-left:15px;
}

.tokenlogoimage{
  border-radius:50%;
  box-shadow: 5px 5px 10px 0 rgba( 31, 38, 135, 0.2 );
  margin-top:auto;
  margin-bottom:auto;
}

.trxbutton:hover{
   transform: scale(1.2);
}


.createbutton{
  background-image: linear-gradient(to right, #21D2FF 0%, #F17AE9  51%, #21D2FF  100%);
  margin: 10px;
  padding: 15px 45px;
  text-align: center;
  text-transform: uppercase;
  transition: 0.5s;
  background-size: 200% auto;
  color: white;
  border-radius: 10px;
  display: block;
  border:0px;
  font-weight:600;
  font-size:12px;
  margin-left:auto;
  margin-right:10%;
  box-shadow: 0 0 20px rgba( 31, 38, 135, 0.1 );
}
.createbutton:hover {
  background-position: right center; /* change the direction of the change here */
  color: #fff;
  text-decoration: none;
}

.tokeninput{
  background: transparent;
  border: none;
  border-bottom:solid 1px;
  min-width:10px;
  width:40px;
  font-weight:600;
  text-align:center;
  color:inherit;
}

input[type="number"] {
  font-size:20px;
}

input[type="number"] {
  -webkit-appearance: textfield;
     -moz-appearance: textfield;
          appearance: textfield;
}
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
}
.statcards{
 display:flex;

 flex-wrap:wrap;
}

.statcard{
  background: rgba( 255, 255, 255, 0.7 );
  box-shadow: 10px 10px 32px 0 rgba( 31, 38, 135, 0.05 );
  border-radius:30px;
  padding:20px;
  height:80px;
  width:80px;
  margin-right:10px;
  margin-top:10px;
  display: flex;
  flex: 1 0 30%;
  align-items:center;
  justify-content: center;
  flex-direction: column;
}

.stat{
  font-size:16px;
  font-weight:600;
}

.statexplainer{
  font-size:12px;
}

.outsidebutton{
  position:absolute;
  width:52px;
  height:52px;
  background: rgba( 255, 255, 255, 0.25 );
  box-shadow: 10px 10px 32px 0 rgba( 31, 38, 135, 0.1 );
  border-radius:30px;
  display:flex;
  align-items:center;
  justify-content: center;
  transition-duration:0.3s;
  cursor: pointer;
}

.outsidebutton:hover{
  transform:scale(1.2)
}

.outsidebutton:hover .outsideimg{
  display:none;
}

.outsidebutton:hover .outsideimgright{
  display:none;
}

.outsidebuttontext{
  display:none;
  font-size:10px;
  font-weight:600;
}

.outsidebutton:hover .outsidebuttontext{
  display:block;
}

.govrnbutton{
  right:90px;
  top:-20px;
}

.buybutton{
  right:30px;
  top:-20px;
}

.telegrambutton{
  right:80px;
  bottom:10px;
  width:40px;
  height:40px;
}

.githubbutton{
  right:30px;
  bottom:10px;
  width:40px;
  height:40px;
}

.twitterbutton{
  right:130px;
  bottom:10px;
  width:40px;
  height:40px;
}

.mediumbutton{
  right:180px;
  bottom:10px;
  width:40px;
  height:40px;
}

.outsideimg{
  width:32px;
}

.outsideimgright{
  width:24px;
}

@media only screen and (max-width: 800px) {
  .outsidebutton{
    display:none;
  }
}

.chartwrapper{
  width:100%;
  height:100%;
  display:flex;
  align-items:center;
  justify-content:center;
}

